# HSE-Computing-Architecture

./: .gitignore  CMakeLists.txt  README.md  link.sh  run.sh
docs/: Архитектура.drawio
misc/: grouplist.xlsx  taskProviderOutput.txt
misc/template/: Отчет.docx
misc/txt/: task.txt
output/: summary.txt
output/deterministic/1/: output1.txt
output/deterministic/2/: output1.txt  output2.txt
output/random/1/: output1.txt  output2.txt
output/random/2/: output1.txt  output2.txt
output/random/3/: output1.txt  output2.txt
src/: cartoon.asm  constants.asm  container.asm  container.py  documentary.asm  feature.asm  film.asm  io.asm  main.asm  main.cpp  main.py
src/barber/: barber.cpp  barber.h
src/container/: container.cpp  container.h  container.py
src/film/: film.cpp  film.h  film.py
src/film/cartoon/: cartoon.cpp  cartoon.h  cartoon.py
src/film/documentary/: documentary.cpp  documentary.h  documentary.py
src/film/feature/: feature.cpp  feature.h  feature.py
src/logger/: logger.h
src/salon/: salon.cpp  salon.h
src/utils/: file_wrapper.py  io.py  rand.py
src/utils/io/: io.cpp  io.h
src/utils/random/: random.cpp  random.h
src/visitor/: visitor.cpp  visitor.h
test/: all.sh  input.txt  note.txt  output1.txt  output2.txt
test/deterministic/1/: input.txt  output1.txt  output2.txt
test/deterministic/2/: input.txt  output1.txt  output2.txt
test/deterministic/incorrect_0/: output1.txt  output2.txt
test/deterministic/incorrect_1/: input.txt
test/deterministic/incorrect_2/: input.txt
test/random/1/: details.txt  output1.txt  output2.txt  (+1 more)
(+8 files in other folders)
